# NetGameSim

./: NetGraph_08-04-26-01-10-58.ngs  NetGraph_08-04-26-01-10-58.ngs.dot  NetGraph_08-04-26-01-10-58.ngs.perturbed  NetGraph_08-04-26-01-10-58.ngs.perturbed.dot  NetGraph_08-04-26-01-10-58.ngs.yaml  README.md  REPORT.md  build.sbt
build_wsl/: CMakeCache.txt  Makefile  cmake_install.cmake  ngs_mpi
configs/: medium.conf  small.conf
experiments/: check_mpi.sh  e2e.ps1  e2e.sh  run_dijkstra.ps1  run_dijkstra.sh  run_experiments.sh  run_leader.ps1  run_leader.sh  test_small.ps1  test_small.sh  update_report_from_summaries.py
mpi_runtime/: CMakeLists.txt
mpi_runtime/include/: graph.hpp
mpi_runtime/src/: loaders.cpp  main.cpp
output/: NetGraph_08-04-26-01-43-50.ngs  NetGraph_08-04-26-01-43-50.ngs.dot  NetGraph_08-04-26-01-43-50.ngs.perturbed  NetGraph_08-04-26-01-43-50.ngs.perturbed.dot  NetGraph_08-04-26-01-43-50.ngs.yaml  NetGraph_09-04-26-20-23-00.ngs  NetGraph_09-04-26-20-23-00.ngs.dot  NetGraph_09-04-26-20-23-00.ngs.perturbed  NetGraph_09-04-26-20-23-00.ngs.perturbed.dot  NetGraph_09-04-26-20-23-00.ngs.yaml  NetGraph_09-04-26-20-28-00.ngs  NetGraph_09-04-26-20-28-00.ngs.dot  NetGraph_09-04-26-20-28-00.ngs.perturbed  NetGraph_09-04-26-20-28-00.ngs.perturbed.dot  NetGraph_09-04-26-20-28-00.ngs.yaml  NetGraph_09-04-26-21-25-49.ngs  NetGraph_09-04-26-21-25-49.ngs.dot  NetGraph_09-04-26-21-25-49.ngs.perturbed  NetGraph_09-04-26-21-25-49.ngs.perturbed.dot  NetGraph_09-04-26-21-25-49.ngs.yaml  NetGraph_09-04-26-21-34-34.ngs  NetGraph_09-04-26-21-34-34.ngs.dot  NetGraph_09-04-26-21-34-34.ngs.perturbed  NetGraph_09-04-26-21-34-34.ngs.perturbed.dot  (+87 more)
(+24 files in other folders)
